<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dae</groupId>
    <artifactId>EventViewer</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
        <javafx.version>14</javafx.version>
    </properties>

<dependencies>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>14.0.1</version>
    </dependency>

    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>14.0.1</version>
    </dependency>

    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>14.0.1</version>
    </dependency>

    <dependency>
        <groupId>org.controlsfx</groupId>
        <artifactId>controlsfx</artifactId>
        <version>11.0.1</version>
    </dependency>

    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-swing</artifactId>
        <version>14.0.1</version>
    </dependency>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>14.0.1</version>
    </dependency>

</dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                <compilerArgument>--add-exports=org.controlsfx.controls/impl.org.controlsfx.autocompletion=EventMaker</compilerArgument>
                <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>

                <configuration>
                    <release>${maven.compiler.release}</release>
                    <jlinkImageName>WOHMaker</jlinkImageName>
                    <launcher>Launch.WOHMaker</launcher>
                    <commandlineArgs>--add-exports=org.controlsfx.controls/impl.org.controlsfx.autocompletion=EventMaker</commandlineArgs>
                    <compilerArgs>
                        <compilerArg>--add-exports</compilerArg>
                        <compilerArg>org.controlsfx.controls/impl.org.controlsfx.autocompletion=EventMaker</compilerArg>
                    </compilerArgs>
                    <options>
                        <option>--add-exports</option>
                        <option>org.controlsfx.controls/impl.org.controlsfx.autocompletion=EventMaker</option>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                    </options>
                    <mainClass>eventmaker.Main</mainClass>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>